--- a/usr/src/cmd/find/Makefile
+++ b/usr/src/cmd/find/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,18 +21,23 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
-PROG= find
-XPG4PROG= find
+PROG=		find
+XPG4PROG=	find
+FINDOBJS1=	find.o
+FINDOBJS=	$(FINDOBJS1) getresponse.o
+XPG4FINDOBJS=	$(FINDOBJS:%.o=xpg4_%.o)		
+SRCS=		$(FINDOBJS1:%.o=%.c) $(SRC)/common/util/getresponse.c
 
 include ../Makefile.cmd
 
-$(XPG4) := CFLAGS += -DXPG4
-CPPFLAGS += -D_FILE_OFFSET_BITS=64
+$(XPG4)	:= CFLAGS += -DXPG4
+CPPFLAGS += -D_FILE_OFFSET_BITS=64 -I $(SRC)/common/util
 
+LINTFLAGS += -u
 LDLIBS += -lsec
 
 .KEEP_STATE:
@@ -42,8 +46,29 @@ all: $(PROG) $(XPG4)
 
 install: all $(ROOTPROG) $(ROOTXPG4PROG)
 
-clean:
+$(PROG):	$(FINDOBJS)
+	$(LINK.c) -o $@ $(FINDOBJS) $(LDLIBS)
+	$(POST_PROCESS)
 
-lint:	lint_PROG
+$(XPG4):	$(XPG4FINDOBJS)
+	$(LINK.c) -o $@ $(XPG4FINDOBJS) $(LDLIBS)
+	$(POST_PROCESS)
+
+%.o:	$(SRC)/common/util/%.c
+	$(COMPILE.c) $(OUTPUT_OPTION) $<
+	$(POST_PROCESS_O)
+
+xpg4_%.o:	%.c
+	$(COMPILE.c) -o $@ $<
+	$(POST_PROCESS_O)
+
+xpg4_%.o:	$(SRC)/common/util/%.c
+	$(COMPILE.c) -o $@ $<
+	$(POST_PROCESS_O)
+
+clean:
+	$(RM) $(FINDOBJS)
+
+lint:	lint_SRCS
 
 include ../Makefile.targ
