--- a/usr/src/psm/stand/boot/sparcv9/sun4v/Makefile
+++ b/usr/src/psm/stand/boot/sparcv9/sun4v/Makefile
@@ -33,6 +33,7 @@ MODULE	= fs
 
 PLATLINKS	= SUNW,Sun-Fire-T200
 PLATLINKS	+= SUNW,Netra-CP3060
+PLATLINKS	+= SUNW,Netra-CP3260
 PLATLINKS	+= SUNW,Sun-Blade-T6300
 PLATLINKS	+= SUNW,Sun-Blade-T6320
 PLATLINKS	+= SUNW,SPARC-Enterprise-T5120
