--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -41,6 +41,7 @@ LINKED_PLATFORMS += SUNW,T5240
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T1000
 LINKED_PLATFORMS += SUNW,Sun-Blade-T6300
 LINKED_PLATFORMS += SUNW,Sun-Blade-T6320
+LINKED_PLATFORMS += SUNW,Netra-CP3260
 PROMIF		 = ieee1275
 PSMBASE		 = $(UTSBASE)/../psm
 
