6585997 core debugger should not depend on libm

--- a/usr/src/cmd/mdb/intel/amd64/genunix/Makefile
+++ b/usr/src/cmd/mdb/intel/amd64/genunix/Makefile
@@ -51,6 +51,8 @@ include ../../../../Makefile.cmd.64
 include ../../Makefile.amd64
 include ../../../Makefile.module
 
+dmod/$(MODULE) := LDLIBS += -lm
+
 #
 # We are not actually hardwiring some dependency on i86pc, we just need to
 # include sys/param.h with _MACHDEP defined, and this forces the inclusion of
