--- a/usr/src/cmd/mdb/intel/amd64/libumem/Makefile
+++ b/usr/src/cmd/mdb/intel/amd64/libumem/Makefile
@@ -30,6 +30,7 @@ MDBTGT = proc
 MODSRCS_DIR = ../../../common/modules/genunix
 
 MODSRCS = \
+	dist.c \
 	kgrep.c \
 	leaky.c \
 	leaky_subr.c \
@@ -46,6 +47,8 @@ CPPFLAGS += -I$(MODSRCS_DIR)
 
 include ../../Makefile.amd64
 include ../../../Makefile.module
+
+dmod/$(MODULE) := LDLIBS += -lm
 
 %.o: $(MODSRCS_DIR)/%.c
 	$(COMPILE.c) $<
