--- a/usr/src/cmd/gss/etc/krb5.conf
+++ b/usr/src/cmd/gss/etc/krb5.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 # 
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,22 +28,23 @@
 # krb5.conf template
 # In order to complete this configuration file
 # you will need to replace the __<name>__ placeholders
-# with appropriate values for your network.
+# with appropriate values for your network and uncomment the
+# appropriate entries.
 #
 [libdefaults]
-        default_realm = ___default_realm___
+#        default_realm = ___default_realm___
 
 [realms]
-        ___default_realm___ = {
-                kdc = ___master_kdc___
-                kdc = ___slave_kdc1___
-                kdc = ___slave_kdc2___
-                kdc = ___slave_kdcN___
-                admin_server = ___master_kdc___
-        }
+#        ___default_realm___ = {
+#                kdc = ___master_kdc___
+#                kdc = ___slave_kdc1___
+#                kdc = ___slave_kdc2___
+#                kdc = ___slave_kdcN___
+#                admin_server = ___master_kdc___
+#        }
 
 [domain_realm]
-	___domainname___ = ___default_realm___
+#	___domainname___ = ___default_realm___
 
 [logging]
         default = FILE:/var/krb5/kdc.log
