6587389 prtdiag -v Formatting issues (fix ELF versioning)

--- a/usr/src/lib/libprtdiag/sparc/sun4v/Makefile
+++ b/usr/src/lib/libprtdiag/sparc/sun4v/Makefile
@@ -41,7 +41,7 @@ OBJECTS		= io.o cpu.o memory.o kstat.o prom.o \
 include		../../Makefile.com
 
 SRCS		= $(OBJECTS:%.o=../../common/%.c)
-LDLIBS		+= -lpicl
+LDLIBS		+= -lpicl -lm
 
 #
 # used for creating message catalogue files
