--- a/usr/src/cmd/sgs/Makefile.var
+++ b/usr/src/cmd/sgs/Makefile.var
@@ -168,8 +168,8 @@ VAR_SGSCCSLINK64=	$(ROOTCCSBINLINK64)
 # ld
 #
 VAR_LD_NATIVE_LLDLIBS=
-VAR_LD_LLDFLAGS=	'-R$$ORIGIN/../../../lib'
-VAR_LD_LLDFLAGS64 =	'-R$$ORIGIN/../../../../lib/$(MACH64)'
+VAR_LD_LLDFLAGS=	'-R$$ORIGIN/../../lib'
+VAR_LD_LLDFLAGS64 =	'-R$$ORIGIN/../../../lib/$(MACH64)'
 
 #
 # on 5.10 we no longer link against libdl - However we still
@@ -186,8 +186,8 @@ VAR_DL_LIB =
 #
 # elfdump
 #
-VAR_ELFDUMP_LLDFLAGS=	'-R$$ORIGIN/../../../lib'
-VAR_ELFDUMP_LLDFLAGS64 ='-R$$ORIGIN/../../../../lib/$(MACH64)'
+VAR_ELFDUMP_LLDFLAGS=	'-R$$ORIGIN/../../lib'
+VAR_ELFDUMP_LLDFLAGS64 ='-R$$ORIGIN/../../../lib/$(MACH64)'
 
 #
 # lddstub
