--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -845,7 +845,9 @@ SYSEVENTHDRS=		\
 
 CONTRACTHDRS=		\
 	process.h	\
-	process_impl.h
+	process_impl.h	\
+	device.h	\
+	device_impl.h
 
 USBHDRS=	\
 	usba.h	\
