PSARC 2006/708 ddi-forceload PSARC 2006/710 scsi_get_device_type_string PSARC 2007/379 MPXIO/scsi_vhci failover-ops configuration - revisited 6504975 ddi_modopen should allow open in subdirectory 6542649 step0: opensource mpxio

--- a/usr/src/uts/Makefile.targ
+++ b/usr/src/uts/Makefile.targ
@@ -188,6 +188,9 @@ $(ROOT_CRYPTO_DIR)/%:	$(OBJS_DIR)/% $(ROOT_CRYPTO_DIR) FRC
 $(ROOT_KGSS_DIR)/%:	$(OBJS_DIR)/% $(ROOT_KGSS_DIR) FRC
 	$(INS.file)
 
+$(ROOT_SCSI_VHCI_DIR)/%: $(OBJS_DIR)/% $(ROOT_SCSI_VHCI_DIR) FRC
+	$(INS.file)
+
 $(ROOT_MACH_DIR)/%:	$(OBJS_DIR)/% $(ROOT_MACH_DIR) FRC
 	$(INS.file)
 
