--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -659,6 +659,14 @@ SCSI_OBJS +=	scsi_capabilities.o	scsi_control.o	scsi_watch.o \
 		scsi_hba.o	scsi_transport.o	scsi_confsubr.o \
 		scsi_reset_notify.o
 
+SCSI_VHCI_OBJS +=		scsi_vhci.o mpapi_impl.o
+
+SCSI_VHCI_F_SYM_OBJS +=		sym.o
+
+SCSI_VHCI_F_TPGS_OBJS +=	tpgs.o
+
+SCSI_VHCI_F_ASYM_SUN_OBJS +=	asym_sun.o
+
 SGEN_OBJS +=	sgen.o
 
 SATA_OBJS +=	sata.o
