PSARC/2006/501 Nvidia ck804/mcp55 SATA HBA driver PSARC/2007/100 Device Id Extensions PSARC/2007/172 Reserved Devnames 6296435 native sata driver needed for nVIDIA mcp04 and mcp55 controllers 6418034 DMA resources need to be released for scsi commands emulated in sata framework 6487018 driver binding for sata storage devices should be more flexible 6487838 common definitions can be defined in sata_defs.h to be shared with other sata HBA's 6549855 PSARC/2007/100 Device Id Extensions 6549915 devfsadm enhancements for PSARC/2007/172 Reserved Devnames

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -776,6 +776,8 @@ EMUL64_OBJS += emul64.o emul64_bsd.o
 
 ZCONS_OBJS += zcons.o
 
+NV_SATA_OBJS += nv_sata.o
+
 SI3124_OBJS += si3124.o
 
 NSCONFIG_DEVNAME_OBJS += sdev_nsconfig_mod.o
