--- a/usr/src/uts/common/io/sata/adapters/nv_sata/nv_sata.conf
+++ b/usr/src/uts/common/io/sata/adapters/nv_sata/nv_sata.conf
@@ -22,15 +22,7 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
- 
-include ../Makefile.com
 
-DATAFILES += depend
+#pragma ident	"%Z%%M%	%I%	%E% SMI"
 
-.KEEP_STATE:
-
-all: $(FILES) postinstall postremove
-install: all pkg
-
-include ../Makefile.targ
+use-cmdk-devid-format=1;
