--- a/usr/src/cmd/devfsadm/Makefile
+++ b/usr/src/cmd/devfsadm/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,13 +21,15 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # cmd/devfsadm/Makefile
 #
 
 DEFAULTFILES = devfsadm.dfl
+
+ETCDEVFILES=reserved_devnames
 
 include ../Makefile.cmd
 
@@ -44,11 +45,31 @@ clobber	:=	TARGET= clobber
 _msg	:=	TARGET= _msg
 lint	:=	TARGET= lint
 
+ROOTETCDEV=	$(ROOTETC)/dev
+ROOTETCDEVFILES=$(ETCDEVFILES:%=$(ROOTETCDEV)/%)
+$(ROOTETCDEV) :=	DIRMODE=	755
+$(ROOTETCDEV) :=	OWNER=          root
+$(ROOTETCDEV) :=	GROUP=          sys
+$(ROOTETCDEVFILES) :=	OWNER = root
+$(ROOTETCDEVFILES) :=	GROUP = sys
+$(ROOTETCDEVFILES) :=	FILEMODE = 0644
+
 .KEEP_STATE:
 
-all clean clobber lint _msg:	$(SUBDIRS)
+all:	$(SUBDIRS) $(ETCDEVFILES)
 
-install: $(SUBDIRS) $(ROOTETCDEFAULTFILES)
+clean lint _msg:	$(SUBDIRS)
+
+clobber: $(SUBDIRS)
+	$(RM) $(ROOTETCDEVFILES)
+
+install: $(SUBDIRS) $(ROOTETCDEFAULTFILES) $(ROOTETCDEVFILES)
+
+$(ROOTETCDEV):
+	$(INS.dir)
+
+$(ROOTETCDEV)/% : % $(ROOTETCDEV)
+	$(INS.file)
 
 $(SUBDIRS):	FRC
 	@cd $@; pwd; $(MAKE) $(TARGET)
