PSARC/2006/662 Make err/warn part of Solaris's libc 6495220 add err() et al. to libc

--- a/usr/src/lib/libipsecutil/Makefile
+++ b/usr/src/lib/libipsecutil/Makefile
@@ -27,7 +27,7 @@
 
 include ../Makefile.lib
 
-HDRS =		ipsec_util.h ikedoor.h err.h
+HDRS =		ipsec_util.h ikedoor.h errfp.h
 HDRDIR =	common
 SUBDIRS	=	$(MACH)
 
