6570902 fruadm returns wrong status when write is successful 6553115 prtfru does not print SPD data 6535100 Prtfru displays incorrect info from Astec DS-550 PSU in Seattle platform

--- a/usr/src/cmd/picl/plugins/sun4u/lib/fruaccess/fru_container.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/lib/fruaccess/fru_container.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,10 +19,10 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI" 
 #
 
 # Cut-off read-only section
@@ -39,7 +38,17 @@ i2c-at24c64|6krw2kro|8k_6krw2kro_SEEPROM:1:0,0,6144:1,6144,2048
 i2c-at34cps|256rw:1:0,0,256
 
 # Available section of device used in commodity FRUs
-i2c-at34c02|128rw:1:2,0,128,SPD:0,128,128
+i2c-at34c02|128rwDDR1:1:2,0,146,SPD:0,128,128
+
+i2c-at34c02|128rw128ro:1:0,0,128:1,128,128
 
 # 2155x bridge based product using 93LC66 serial prom VPD.
 93LC66|392rw:1:0,0,392
+
+# Implement Sun SPD JEDEC DIMM Spec.
+# DDR2 DIMM
+128rwDDR2:1:2,0,128,SPD:3,128,128
+
+#ipmi image
+ipmi:0:0,0,512
+
