6543061 /opt/SUNWdtrt/tst/common/mib/tst.tcp.ksh can hang if fingerd is disabled 6581091 some DTrace test suite tests are not dstyle clean 6581196 many ksh scripts in the DTrace test suite use incorrect SCCS ID string 6581228 some DTrace test suite scripts need to specify a unit for cleanrate 6593038 some D scripts in the test suite contain multiple identical SCCS ident strings

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -861,6 +861,9 @@ MANIFEST_SUBDIRS=			\
 	ypcmd/ypupdated			\
 	xntpd/xntpd
 
+DTEST_SUBDIRS= \
+	dtrace/test/tst
+
 all :=		TARGET = all
 install :=	TARGET = install
 clean :=	TARGET = clean
@@ -875,15 +878,19 @@ _dc :=		TARGET = _dc
 SUBDIRS = $(COMMON_SUBDIRS) $($(MACH)_SUBDIRS)
 
 .PARALLEL:	$(BWOSDIRS) $(SUBDIRS) $(MSGSUBDIRS) $(BSMSUBDIRS) \
-		$(MANIFEST_SUBDIRS)
+		$(MANIFEST_SUBDIRS) $(DTEST_SUBDIRS)
 
 all install clean clobber lint: $(FIRST_SUBDIRS) .WAIT $(SUBDIRS) $(BSMSUBDIRS)
 
-check: svccfg_check .WAIT $(MANIFEST_TOPDIRS) $(MANIFEST_SUBDIRS)
+check: svccfg_check .WAIT $(MANIFEST_TOPDIRS) $(MANIFEST_SUBDIRS) \
+	$(DTEST_SUBDIRS)
 
 svccfg_check:
 	@$(ECHO) "building requirements for svccfg check ..."; \
 	(cd $(SRC)/cmd/svc/svccfg && pwd && $(MAKE) $(MFLAGS) native)
+
+$(DTEST_SUBDIRS): FRC
+	@cd $@; pwd; $(MAKE) $(TARGET)
 
 #
 # The .WAIT directive works around an apparent bug in parallel make.
