--- a/usr/src/cmd/dtrace/test/tst/Makefile
+++ b/usr/src/cmd/dtrace/test/tst/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -31,5 +31,9 @@ SUBDIRS= common $(MACH)
 include ../Makefile.subdirs
 
 dstyle := TARGET += dstyle
+
+check: FRC
+	@$(ECHO) "checking dstyle"
+	@$(MAKE) dstyle
 
 dstyle: $(SUBDIRS)
