6550889 The cpumem de does not include the chassis-id in the FRU FMRI 6593315 sun4v motherboard enumerator needs different PRI access criteria for chassis serial number

--- a/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/Makefile.cpumem
+++ b/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/Makefile.cpumem
@@ -57,7 +57,7 @@ INCDIRS += \
 
 CPPFLAGS += $(INCDIRS:%=-I%) -DCMD_VERSION='$(CMD_VERSION)' -D$(ARCH)
 
-LDFLAGS += -lkstat
+LDLIBS += -lkstat -L$(ROOTLIB)/fm -ltopo
 
 %.o: $(SUN4DIR)/%.c
 	$(COMPILE.c) -o $@ $<
