6591817 possible problems installing snv_71 with pam.conf and SUNWtsu 6592268 SUNWts* packages are missing depend file or had incorrect depend file in snv_71. 6593274 remove unused CAS scripts from SUNWts* packaging

--- a/usr/src/pkgdefs/SUNWtsg/Makefile
+++ b/usr/src/pkgdefs/SUNWtsg/Makefile
@@ -27,8 +27,7 @@
 
 include ../Makefile.com
 
-DATAFILES += i.devallocdefs i.initd i.renamenew r.renamenew
-CHKINSTALLSRC=checkinstall.initd
+DATAFILES += i.devallocdefs i.renamenew r.renamenew
 
 .KEEP_STATE:
 
