6550889 The cpumem de does not include the chassis-id in the FRU FMRI (fix ELF runtime)

--- a/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis/Makefile
+++ b/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis/Makefile
@@ -37,3 +37,5 @@ sun4u_SRCS = cmd_ecache.c \
 INCDIRS = $(SRC)/uts/sun4u
 
 include ../../sun4/cpumem-diagnosis/Makefile.cpumem
+
+LDFLAGS += -R/usr/lib/fm
